# fedem-foundation

./: README.md  note-to-self
.github/workflows/: run-test.yml
.reuse/: dep5
src/: CMakeLists.txt
src/FFaFunctionLib/: CMakeLists.txt  splineModule.f90
src/FFaFunctionLib/FFaFunctionTests/: CMakeLists.txt  testSpline.pf
src/FFaLib/FFaAlgebra/: CMakeLists.txt  FFaMat33.C  FFaMat33.H  FFaSpline.C  FFaSpline.H  FFaSplineHandler_F.C
src/FFaLib/FFaDynCalls/: FFaSwitchBoard.C  FFaSwitchBoard.H
src/FFaLib/FFaOperation/: FFaBasicOperations.C  FFaOperation.H
src/FFaLib/FFaString/: FFaEnum.H
src/FFaLib/FFaTests/: CMakeLists.txt  FFaTest.C  SplineTest.C  circle.txt  points.txt  test_FFa.C  triangle.txt
src/FFlLib/: CMakeLists.txt  FFlAttributeBase.C  FFlAttributeBase.H  FFlElementBase.C  FFlElementBase.H  FFlFEAttributeRefs.C  FFlFEAttributeRefs.H  FFlFENodeRefs.C  FFlFENodeRefs.H  FFlGroup.C  FFlGroup.H  FFlLinkHandler.C  FFlLinkHandler.H  FFlLinkHandler_F.C  FFlLoadBase.C  FFlLoadBase.H  FFlMemPool.C  FFlMemPool.H  FFlPartHandler.H  FFlUtils.C  FFlUtils.H  FFlVertex.C  FFlVertex.H  FFlVisualBase.C  FFlVisualBase.H  FFlVisualRefs.C  FFlVisualRefs.H
src/FFlLib/FFlFEParts/: CMakeLists.txt  FFlAllFEParts.C  FFlAllFEParts.H  FFlBEAM3.C  FFlBEAM3.H  FFlBUSH.C  FFlBUSH.H  FFlBeams.C  FFlBeams.H  FFlCLOAD.C  FFlCLOAD.H  FFlCMASS.C  FFlCMASS.H  FFlCurvedFace.C  FFlCurvedFace.H  FFlLoads.C  FFlLoads.H  FFlNode.C  FFlNode.H  FFlPBEAMECCENT.C  FFlPBEAMECCENT.H  FFlPBEAMPIN.C  FFlPBEAMPIN.H  FFlPCOMP.C  (+61 more)
src/FFrLib/: FFrReadOp.H  FFrReadOpImpl.C
src/Minpack/: README.md
(+28 files in other folders)
